--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,6 @@
 
 .container {
     background-color: #1F2937;
-    min-height: 25%;
 }
 
 .header-links{
@@ -79,24 +78,28 @@ a:visited {
     margin-top: 60px;
 } 
 
-.subtext {
+.subtextes h2 {
+    font-size: 32px;
+    text-align: center;
+}
+
+.squares {
+    width: 80px;
+    height: 80px;
+    background-color: lightblue;;
+
+}
+
+.nav-shapes {
+    display: flex;
+    margin-top: 10px;
+    justify-content: space-around;
+    gap: 8px;
+}
+
+.p-spaces {
     display: flex;
     justify-content: space-around;
+    margin-top: 8px;
 }
 
-.container-2 h3 {
-    font-size: 36px;
-    text-align: center;
-    padding: 16px;
-}
-.square {
-    background-color: lightblue;
-    width: 50px;
-    height: 50px;
-}
-
-
-.p-spacing {
-    margin-top: 45px;
-    padding: 8px;
-}
