--- a/css/style.css
+++ b/css/style.css
@@ -126,3 +126,22 @@ a:visited {
     margin-top: 20px;
     margin-left: 1010px;
 }
+
+.container-4 {
+    height: 300px;
+}
+
+.signup-container {
+    background-color: #3882F6;
+    color: #fff;
+
+}
+
+.container-5 {
+    background-color: #1F2937;
+    color: #fff;
+    font-size: 24px;
+    text-align: center;
+    padding-top: 18px;
+    height: 60px;
+}
