--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,10 @@
 
 .first-btn {
     background-color: #3882F6;
-    border-radius: 30%;
+    border-radius: 5px;
+    color: #fff;
     width: 100px;
-    padding: 10px;
+    padding: 10px;  
 }
 
 .container {
@@ -104,6 +105,7 @@ a:visited {
 }
 
 .container-2 {
+    margin: 12px;
 }
 
 .container-3 {
@@ -128,13 +130,29 @@ a:visited {
 }
 
 .container-4 {
-    height: 300px;
+    height: 250px;
 }
 
 .signup-container {
     background-color: #3882F6;
+    border-radius: 10px;
     color: #fff;
+    height: 100px;
+    margin-top: 200px;
+    margin-left: 200px;
+    padding: 15px;
+    width: 800px;
 
+}
+
+.signup-btn {
+    background-color: #3882F6;
+    border-radius: 5px;
+    border-color: #fff;
+    padding: 5px;
+    color: #fff;
+    font-size: 20px;
+ 
 }
 
 .container-5 {
@@ -144,4 +162,9 @@ a:visited {
     text-align: center;
     padding-top: 18px;
     height: 60px;
+}
+
+.signup {
+    display: flex;
+    gap: 50px;
 }
