Add content to style.css

--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,7 @@
 
 .first-btn {
     background-color: #3882F6;
-    border-radius: 5px;
-    color: #fff;
+    border-radius: 5;
     width: 100px;
     padding: 10px;  
 }
